<package>
  <name>jsk_travis</name>
  <version>0.5.0</version>
  <description>jsk_travis scripts</description>
  <license>BSD</license>
  <maintainer email="k-okada@jsk.t.u-tokyo.ac.jp">Kei Okada</maintainer>
  <author email="k-okada@jsk.t.u-tokyo.ac.jp">Kei Okada</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>python</build_depend>
  <build_depend>catkin</build_depend>
  <build_depend>rostest</build_depend>
  <test_depend>rospy_tutorials</test_depend>
  <test_depend>gazebo_ros</test_depend>
  <test_depend>gazebo_plugins</test_depend>

  <!-- add pip module with takes long time to install -->
  <test_depend>python-chainer-pip</test_depend>
  <test_depend>python-chainercv-pip</test_depend>
  <test_depend>python-fcn-pip</test_depend>

  <export/>
</package>
