<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>jsk_travis</name>
  <version>0.5.27</version>
  <description>jsk_travis scripts</description>
  <license>BSD</license>
  <maintainer email="k-okada@jsk.t.u-tokyo.ac.jp">Kei Okada</maintainer>
  <author email="k-okada@jsk.t.u-tokyo.ac.jp">Kei Okada</author>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>python-gdown-pip</exec_depend>

  <build_depend condition="$ROS_PYTHON_VERSION == 2">python</build_depend>
  <build_depend condition="$ROS_PYTHON_VERSION == 3">python3</build_depend>
  <build_depend condition="$ROS_PYTHON_VERSION == 2">python-scipy</build_depend>
  <build_depend condition="$ROS_PYTHON_VERSION == 3">python3-scipy</build_depend>
  <build_depend condition="$ROS_PYTHON_VERSION == 2">python-lxml</build_depend>
  <build_depend condition="$ROS_PYTHON_VERSION == 3">python3-lxml</build_depend>
  <build_depend>catkin</build_depend>
  <build_depend>rostest</build_depend>
  <test_depend>rospy_tutorials</test_depend>
  <test_depend>gazebo_ros</test_depend>
  <test_depend>gazebo_plugins</test_depend>

  <!-- add pip module with takes long time to install -->
  <test_depend condition="$ROS_PYTHON_VERSION == 2">python-chainer-pip</test_depend>
  <test_depend condition="$ROS_PYTHON_VERSION == 2">python-chainercv-pip</test_depend>
  <test_depend condition="$ROS_PYTHON_VERSION == 2">python-fcn-pip</test_depend>

  <export/>
</package>
